--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "mongoose": "^4.2.8",
     "node-jsx": "^0.13.3",
     "ntwitter": "^0.5.0",
-    "socket.io": "^1.3.7"
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "socket.io": "^1.3.7",
+    "twitter": "^1.2.5"
   },
   "devDependencies": {
     "browserify": "^12.0.1",
@@ -29,7 +32,7 @@
   },
   "browserify": {
     "transform": [
-        "reactify"
+      "reactify"
     ]
   }
 }
